# tentacle

./: .gitmodules  .ycm_extra_conf.py  CMakeLists.txt
assets/: CMakeLists.txt
assets/fonts/: octo.aseprite
src/: CMakeLists.txt
src/asset-locator/: .gitignore  CMakeLists.txt  asset_locator.cpp
src/asset-locator/include/: asset_locator.hpp  assets.inc
src/gfx/: CMakeLists.txt  bitmap_font.cpp  canvas.cpp  color.cpp
src/gfx/include/gfx/: bitmap_font.hpp  canvas.hpp  color.hpp  types.hpp
src/mr-octopus/: CMakeLists.txt  asset_locator.hpp  bitmap_font.cpp  bitmap_font.hpp  canvas.cpp  canvas.hpp  color.cpp  color.hpp  core.cpp  core.hpp  geometry.cpp  geometry.hpp  main.cpp  types.hpp  view.cpp  view.hpp  widgets.cpp  widgets.hpp
src/pack-assets/: CMakeLists.txt  main.cpp
